# pre-commit

./: .pre-commit-hooks.yaml  pyproject.toml
src/cfncli_lint/: cli.py
src/cfncli_lint/cfn_tools/: __init__.py  _config.py  json_encoder.py  literal.py  odict.py  yaml_dumper.py  yaml_loader.py
src/filename_validation/: cli.py
