[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
name = "cfn-cli-validation"
description = "Pre-commit hook to validate cfn-cli files."
readme = "README.md"
keywords = ["cfncli", "pre-commit"]
license = {file = "LICENSE"}
authors = [
  {name = "Stephane Berube", email = "stephane.berube@ised-isde.gc.ca"},
]
classifiers = [
    "Development Status :: 3 - Alpha"
]
version = "0.1.2"

requires-python = ">=3.10"
dependencies = ["pyyaml"]
optional-dependencies.dev = ["pre-commit", "pytest"]

scripts.cfncli-lint = "cfncli_lint.cli:main"

[project.urls]
Homepage = "https://github.com/stephane-berube/pre-commit"
Documentation = "https://github.com/stephane-berube/pre-commit"

[tool.setuptools.packages.find]
where = ["src"]
